--- a/index.html
+++ b/index.html
@@ -20,31 +20,45 @@
 
 <body style="padding: 0; height: 100%;"">
 
-    <nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: #20c997;">
+    <nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: #d0e0e3;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Platformă</a>
+          <a class="navbar-brand col-2" href="#">Platformă</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Pagina principală</a>
+              <li class="nav-item col-6 mx-auto" >
+                <a class="nav-link active" aria-current="page" href="#">
+                  Home
+                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Test Carieră</a>
+              <li class="nav-item col-6 mx-auto">
+                <a class="nav-link" href="#">
+                 Test 
+                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Articole</a>
+              <li class="nav-item col-6 mx-auto">
+                <a class="nav-link" href="#">
+                 Articole
+                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Creează Cont</a>
+              <li class="nav-item col-6 mx-auto">
+                <a class="nav-link" href="#">
+                Înregistrare
+                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Despre Platformă</a>
+              <li class="nav-item col-6 mx-auto">
+                <a class="nav-link" href="#">
+                 Despre Platformă
+                </a>
               </li>
             </ul>
-            <button class="btn btn-dark border border-dark rounded-pill"  type="submit">Log In</button>
+            <button class="btn btn-dark border border-dark rounded-pill"  type="submit">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+              </svg>
+              Log In</button>
           </div>
         </div>
       </nav>
@@ -71,7 +85,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Competențe</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <a href="#" class="btn rounded-pill" style="background-color: #20c997;">Află mai multe</a>
+                  <a href="#" class="btn btn-dark rounded-pill">Află mai multe</a>
                 </div>
               </div>
               <div class="card col mt-3 ms-3 me-3" style="width: 18rem;">
@@ -79,7 +93,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Abilități personale</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <a href="#" class="btn rounded-pill" style="background-color: #20c997;">Află mai multe</a>
+                  <a href="#" class="btn btn-dark rounded-pill">Află mai multe</a>
                 </div>
               </div>
               <div class="card col mt-3 ms-3 me-3" style="width: 18rem;">
@@ -87,7 +101,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Reconversie</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <a href="#" class="btn rounded-pill" style="background-color: #20c997;">Află mai multe</a>
+                  <a href="#" class="btn btn-dark rounded-pill">Află mai multe</a>
                 </div>
               </div>
         </div>
