--- a/index.html
+++ b/index.html
@@ -22,33 +22,33 @@
 
     <nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: #d0e0e3;">
         <div class="container-fluid">
-          <a class="navbar-brand col-2" href="#">Platformă</a>
+          <a class="navbar-brand" href="#" style="padding-right: 50px;">Platformă</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item col-6 mx-auto" >
+              <li class="nav-item " >
                 <a class="nav-link active" aria-current="page" href="#">
                   Home
                 </a>
               </li>
-              <li class="nav-item col-6 mx-auto">
+              <li class="nav-item">
                 <a class="nav-link" href="#">
                  Test 
                 </a>
               </li>
-              <li class="nav-item col-6 mx-auto">
+              <li class="nav-item ">
                 <a class="nav-link" href="#">
                  Articole
                 </a>
               </li>
-              <li class="nav-item col-6 mx-auto">
+              <li class="nav-item">
                 <a class="nav-link" href="#">
                 Înregistrare
                 </a>
               </li>
-              <li class="nav-item col-6 mx-auto">
+              <li class="nav-item">
                 <a class="nav-link" href="#">
                  Despre Platformă
                 </a>
