--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     #header-test {
         font-family: 'Quicksand', sans-serif;
     }
+
+    a.nav-link {
+      color: #fffafa;
+    }
 </style>
 
 <meta charset="utf-8">
@@ -20,41 +24,41 @@
 
 <body style="padding: 0; height: 100%;"">
 
-    <nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: #d0e0e3;">
+    <nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: #008ECC;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#" style="padding-right: 50px;">Platformă</a>
+          <a class="navbar-brand" href="index.html" style="padding-right: 50px;"><img src="img/Logo-Black.png" style="width: 50px; height: 50px;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item " >
-                <a class="nav-link active" aria-current="page" href="#">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html" style="color: #fffafa;">
                   Home
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="#" style="color: #fffafa;">
                  Test 
                 </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="#" style="color: #fffafa;">
                  Articole
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="#" style="color: #fffafa;">
                 Înregistrare
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="about.html" style="color: #fffafa;">
                  Despre Platformă
                 </a>
               </li>
             </ul>
-            <button class="btn btn-dark border border-dark rounded-pill"  type="submit">
+            <button class="btn rounded-pill"  type="submit" style="background-color: #4D516D; color: #fffafa">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                 <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
               </svg>
@@ -68,7 +72,7 @@
             <h1 class="text-center display-1" id="header-test">Fă testul și vezi ce carieră ți se potrivește !</h1>
         </div>
         <div class="d-grid mt-5 col-2 mx-auto">
-            <button class="btn btn-dark rounded-pill" type="button">Start Test</button>
+            <button class="btn rounded-pill" type="button" style="background-color: #4D516D; color: #fffafa">Start Test</button>
           </div>
         <hr>
       </div>
@@ -111,7 +115,14 @@
 
       <footer class="container-fluid" style="width: 100%; position: absolute; left: 0; background-color: black;">
           <div class="container-fluid">
-              <p style="color: white">&copy; Platformă reconversie profesională 2022</p>
+            <div class="row">
+              <div class="col">
+                <img src="img/Logo-White.png" alt="" style="width: 50px; height: 50px;">
+              </div>
+              <div class="col-11">
+                <p style="color: white">&copy; Platformă reconversie profesională 2022</p> 
+              </div>
+            </div>  
           </div>
       </footer>
 
